--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,55 +14,7 @@
         android:theme="@style/Theme.GuruApp_1"
         tools:targetApi="31">
         <activity
-            android:name=".ShalomActivity"
-            android:exported="false" />
-        <activity
-            android:name=".InsagwanActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".AuditoriumActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".LibraryCafeActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".JoyegwanActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".Anniversary50thActivity"
-            android:exported="true" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        </activity>
-        <activity
-            android:name=".NurigwanActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -70,6 +22,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ShalomActivity"
+            android:exported="false" />
+        <activity
+            android:name=".InsagwanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AuditoriumActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LibraryCafeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".JoyegwanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Anniversary50thActivity"
+            android:exported="true" />
+        <activity
+            android:name=".NurigwanActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
