--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.GuruApp_1"
         tools:targetApi="31">
         <activity
+            android:name=".VacationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ShuttleBusMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".QnaActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -24,36 +33,36 @@
         </activity>
         <activity
             android:name=".MapActivity"
-            android:parentActivityName=".MainActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ShalomActivity"
-            android:parentActivityName=".MapActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MapActivity" />
         <activity
             android:name=".InsagwanActivity"
-            android:parentActivityName=".MapActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MapActivity" />
         <activity
             android:name=".AuditoriumActivity"
-            android:parentActivityName=".MapActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MapActivity" />
         <activity
             android:name=".LibraryCafeActivity"
-            android:parentActivityName=".MapActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MapActivity" />
         <activity
             android:name=".JoyegwanActivity"
-            android:parentActivityName=".MapActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MapActivity" />
         <activity
             android:name=".Anniversary50thActivity"
-            android:parentActivityName=".MapActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MapActivity" />
         <activity
             android:name=".NurigwanActivity"
-            android:parentActivityName=".MapActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MapActivity" />
     </application>
 
 </manifest>
