--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,16 @@
         tools:targetApi="31">
         <activity
             android:name=".VacationActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".ShuttleBusMainActivity" />
         <activity
             android:name=".ShuttleBusMainActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".QnaActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".ShuttleBusMainActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
