--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,39 @@
         android:theme="@style/Theme.GuruApp_1"
         tools:targetApi="31">
         <activity
+            android:name=".EtangActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PandorothyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GaeunActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GamtanActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OnigiriActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MangwonActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GrazieActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChegodangActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChoobapActivity"
+            android:exported="false" />
+        <activity
+            android:name=".QuiznosActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Quiznos_Menu"
+            android:exported="false" />
+        <activity
             android:name=".VacationActivity"
             android:exported="false"
             android:parentActivityName=".ShuttleBusMainActivity" />
