--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,34 +15,44 @@
         tools:targetApi="31">
         <activity
             android:name=".EtangActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".NurigwanActivity" />
         <activity
             android:name=".PandorothyActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".AuditoriumActivity" />
         <activity
             android:name=".GaeunActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".NurigwanActivity" />
         <activity
             android:name=".GamtanActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".Anniversary50thActivity" />
         <activity
             android:name=".OnigiriActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".Anniversary50thActivity" />
         <activity
             android:name=".MangwonActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".NurigwanActivity" />
         <activity
             android:name=".GrazieActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".LibraryCafeActivity" />
         <activity
             android:name=".ChegodangActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".NurigwanActivity" />
         <activity
             android:name=".ChoobapActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".NurigwanActivity" />
         <activity
             android:name=".QuiznosActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".NurigwanActivity" />
         <activity
             android:name=".VacationActivity"
             android:exported="false"
