식당 정보 intent 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.guruapp_1">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GuruApp_1"
         tools:targetApi="31">
+        <activity
+            android:name=".DormitoryCafeteria"
+            android:exported="false" />
+        <activity
+            android:name=".StaffCafeteria"
+            android:exported="false" />
+        <activity
+            android:name=".CafeteriaActivity"
+            android:exported="false" />
         <activity
             android:name=".EtangActivity"
             android:exported="false"
