--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.GuruApp_1"
         tools:targetApi="31">
         <activity
+            android:name=".ImageActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".ImageActivity"
+            android:exported="false" />
+        <activity
             android:name=".DormitoryCafeteria"
             android:exported="false" />
         <activity
